Sophie | Fix sidebar wrapper showing on smaller screens

--- a/spicy-site/src/index.responsive.scss
+++ b/spicy-site/src/index.responsive.scss
@@ -12,7 +12,7 @@
         flex-direction: column;
     }
 
-    .sidebar {
+    .sidebar, .sidebar-wrapper {
         display: none;
     }
 }
